syntax = "proto3";

option csharp_namespace = "UniversityApi.Protos";

service Student{
	rpc InitStudent(StudentRequest)  returns (StudentResponse);
	rpc GetStudentInfo (EmailStudent) returns (StudentResponse);

}

message StudentRequest{
	string name=1;
	string last_name=2;
	string email=3;
	StudentIds StudentIds=4;
}
message StudentIds{

	int32 group_id=1;


}



message EmailStudent{
	string email=1;
}

message StudentResponse{	
	int32 university_id=1;
	int32 facultie_id=2;
	int32 group_id=3;
	int32 profession_id=4;
		int32 student_id=5;

}


